- [DS-527] Withdrawn items not shown as deleted in OAI
- [DS-548] Removing repeatable values in DescribeStep does not properly test for authority control

(Claudia Jurgen)
- [DS-558] Error in update sequence script 1.5 to 1.6 Oracle
- [DS-551] Export directories dspace.cfg and build.xml out of sync
- [DS-543] Harvest not internationalized 

(Andrea Bollini)
- [DS-513] Connection leak in SWORD authentication process 

(Caryn Neiswender)
 - [DS-518] Duplicate listing of dependencies in dspace-sword/pom.xml

(Keith Gilbertson)
 - [DS-123] xmlui browse in empty collection displays "Now showing items 1-0" of 0 - incorrect numbering
 - [DS-508] Attachment spelled as attachement in DailyReportEmailer
 - [DS-539] Misspelled attribute in MODS/METS output

(Stuart Lewis)
 - [DS-242] Special groups shown for logged in user rather than for user being examined
 - [DS-506] embargo-lifter command missing from launcher.xml
 - [DS-516] DSRUN does not start Service Manager
 - [DS-526] ItemUpdate - script update
 - [DS-572] Batch metadata editor fails to notice change of item's owning collection

(Ivan Masar)
 - [DS-515] Czech localization of 1.5.2

(Ben Bosman)
 - [DS-579] Required fields in submissions display wrong error message
 - [DS-538] restricted items are being returned in OAI GetRecord method while using harvest.includerestricted.oai
 - [DS-493] Url in browser is incorrect after login

1.6.0 final
===========

(Alexey Maslov)
 - [DS-289] OAI-PMH + OAI-ORE harvesting support

(Kim Shepherd)
 - [DS-118] File preview link during submission leads to page not found
 - [DS-121] XMLUI Feedback form breaks with multiple hostnames
 - [DS-156] File description not available in XMLUI
 - [DS-198] File descriptions can not be removed/cleared in XMLUI
 - [DS-240] Item validityKey not complete
 - [DS-251] Bulk Metadata Editing: XMLUI aspect and forms
 - [DS-363] JSPUI statistics views
 - [DS-406] View Statistics button does not work in item page