@@ -29,7 +29,9 @@
 - [DS-543] Harvest not internationalized 
 
 (Andrea Bollini)
-- [DS-513] Connection leak in SWORD authentication process 
+ - [DS-513] Connection leak in SWORD authentication process 
+ - [DS-581] DIDL doesn't respect the hidden fields and the oai_dc metadata section is different than the simple oai_dc implementation
+ - [DS-580] DIDL format include HTML element if the item has no files
 
 (Caryn Neiswender)
  - [DS-518] Duplicate listing of dependencies in dspace-sword/pom.xml
